added recent events and core team header

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,7 +2,10 @@
 $dark-yellow-grey: #171400;
 $dark-grey: #181818;
 $color-white: #ffffff;
-$color-blue: #3a84f9;
+$color-blue: #4285F4;
+$colour-red: #DB4437;
+$colour-yellow: #F4B400;
+$colour-green: #0F9D58;
 
 // Font Size
 $font-size-large: 1.8rem;
