--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,4 @@
 @import './components/PageHeader';
 @import './components/ProjectsPage';
 @import './components/TeamPage';
+@import "node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
