--- a/src/styles/components/_HomePage.scss
+++ b/src/styles/components/_HomePage.scss
@@ -1,6 +1,6 @@
 .home-header {
     height: 95vh;
-    background-image: linear-gradient(to right bottom, rgba($dark-yellow-grey, 0.8), rgba($dark-yellow-grey, 0.8)), url("../../assets/HomePage/homepagebg.jpg");
+    background-image: linear-gradient(to right bottom, rgba($dark-yellow-grey, 0.6), rgba($dark-yellow-grey, 0.6)), url("../../assets/HomePage/homepage.jpg");
     background-size: cover;
     background-position: top;
     //position: relative;
@@ -27,7 +27,7 @@
     backface-visibility: hidden;
     margin-bottom: 6rem;
     text-align: center;
-
+ 
     &--main {
         font-size: 5rem;
         line-height: 5rem;
@@ -52,9 +52,9 @@
 }
 
 .home-heading-secondary {
-    font-size: 3.5rem;
+    font-size: 3.3rem;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 500;
 
     @include respond(tab-port) {
         font-size: 3rem;
@@ -65,12 +65,43 @@
     }
 }
 
-.home-section-about {
+.home-section-whatwedo {
     background-color: $color-blue;
-    padding: 5rem 0;
-    color: $color-white;
+    color: white;
 
     @include respond(tab-port) {
         padding: 20rem 0;
     }
+}
+
+.home-section-whoarewe {
+    background-color: $color-white;
+    padding: 0pt;
+    color: black;
+
+    @include respond(tab-port) {
+        padding: 20rem 0;
+    }
+}
+
+.home-our-recent-events {
+    font-size: 3rem;
+    text-transform: none;
+    font-weight: 500;
+    text-align: center;
+    padding: 1.5rem;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
+}
+
+.home-button {
+    font-size: 1.6rem;
+    font-weight: 0;
+    text-align: center;
 }
