--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @import './base/base';
 @import './base/settings';
 @import './base/mixins';
 @import './components/AboutUsPage';
 @import './components/BlogPage';
 @import './components/ContactPage';
+@import './components/CarouselHome';
 @import './components/ExternalTeam';
 @import './components/HomePage';
 @import './components/InternalTeam';
