--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,13 +7,13 @@
 }
 
 html {
-    font-size: 80%;
+    font-size: 70%;
 }
 
 body {
     color: $dark-grey;
     line-height: 1.6;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
     font-size: $m-size;
 }
 
