--- a/src/styles/components/_PageHeader.scss
+++ b/src/styles/components/_PageHeader.scss
@@ -1,13 +1,16 @@
 .menu {
     margin: 0px !important;
-    border-radius: 0px !important;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    font-size: 130%;
     z-index: 1000 !important;
+    border-radius: 0px !important;
 }
 
 .responsive {
     margin: 0px !important;
     padding: 0px !important;
+    border-radius: 0px !important;
+    border: 0px !important;
 }
