Add header colour change, add footer, modify home styles

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,11 +1,13 @@
 // Colors
 $dark-yellow-grey: #171400;
 $dark-grey: #181818;
+$light-grey: #eaeaea;
 $color-white: #ffffff;
+$color-black: black;
 $color-blue: #4285F4;
-$colour-red: #DB4437;
-$colour-yellow: #F4B400;
-$colour-green: #0F9D58;
+$color-red: #DB4437;
+$color-yellow: #F4B400;
+$color-green: #0F9D58;
 
 // Font Size
 $font-size-large: 1.8rem;
