--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @import './components/ContactPage';
 @import './components/CarouselHome';
 @import './components/ExternalTeam';
+@import './components/Footer';
 @import './components/HomePage';
 @import './components/InternalTeam';
 @import './components/NotFoundPage';
