Clean up home page styling, add blog pagetemplates

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,20 +1,34 @@
 @import './settings';
+@import './mixins';
 
 * {
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-
-html {
-    font-size: 70%;
+    box-sizing: inherit;
 }
 
 body {
     color: $dark-grey;
     line-height: 1.6;
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
-    font-size: $m-size;
+    box-sizing: border-box;
+}
+
+p {
+    font-size: $font-size-small;
+}
+
+html {
+    font-size: 68%;
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+    @include respond(tab-port) {
+        font-size: 60%;
+    }
+    @include respond(big-desktop) {
+        font-size: 80%;
+    }
 }
 
 button {
