--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -12,10 +12,11 @@ $color-green: #0F9D58;
 // Font Size
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
+$font-size-header-secondary: 3.3rem;
 
 // Spacing
 $s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
+$m-size: 2rem;
+$l-size: 4rem;
+$xl-size: 6rem;
 $desktop-breakpoint: 45rem;
