about page 75% done

--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -4,7 +4,7 @@
 
 .footer {
     background-color: $dark-grey;
-    padding: $l-size 0;
+    padding: $l-size;
     font-size: 1.4rem;
     color: $light-grey;
 
