--- a/src/styles/components/_AboutUsPage.scss
+++ b/src/styles/components/_AboutUsPage.scss
@@ -50,3 +50,93 @@
         }
     }
 }
+
+.heading-secondary {
+    font-size: $font-size-header-secondary;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    &--different {
+        text-align: right;
+        font-size: $font-size-header-secondary;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+
+    &--start{
+        text-align: center;
+        font-size: $font-size-header-secondary;
+        text-transform: uppercase;
+        font-weight: 700;
+        color: $color-white;
+    }
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
+}
+
+.mission-vision{
+    color: $color-white;
+    text-transform: uppercase;   
+    backface-visibility: hidden;
+    margin-bottom: 6rem;
+    text-align: center;
+
+}
+
+.paragraph-description{
+    font-size: 21px;
+    
+    &--whatisdsc{
+        text-align: left;
+        font-size: 21px;
+    }
+
+    &--howisdscnusdifferent{
+        text-align: right;
+        font-size: 21px;
+    }
+
+    &--mission-vision{
+        color: $color-white;
+        font-size: 23px;
+    }
+
+    &--howwestart{
+        color: $color-white;
+        font-size: 23px;
+        text-align: center;
+    }
+}
+
+.section-howwestart{
+    background-color: $color-green;
+}
+.dsc-video{
+
+    &--whatisdsc{
+        text-align: center;
+        padding: $l-size;
+        width: 700px;
+        height: 500px;
+    }
+
+    &--howwestart{
+        text-align: center;
+        padding: $l-size;
+        width: 700px;
+        height: 500px;
+        margin: 0 auto;
+    }
+
+}
+
+.section-howwestart{
+    padding: $m-size;
+    margin: 0 auto;
+}
