Changed blog design according to mockup

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,18 +1,23 @@
 // Colors
-$dark-yellow-grey: #171400;
-$dark-grey: #181818;
-$light-grey: #eaeaea;
+$color-dark-yellow-grey: #171400;
+$color-dark-grey: #181818;
+$color-light-grey: #eaeaea;
 $color-white: #ffffff;
 $color-black: black;
 $color-blue: #4285F4;
 $color-red: #DB4437;
 $color-yellow: #F4B400;
 $color-green: #0F9D58;
+$color-teal: #06c1d0;
+$color-light-grey: #f7f5f5;
+$color-grey: #ebebeb;
+$color-medium-grey: #bdbaba;
 
 // Font Size
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
 $font-size-header-secondary: 3.3rem;
+$font-size-header-tertiary: 2.5rem;
 
 // Spacing
 $s-size: 1.2rem;
