--- a/src/styles/components/_TeamPage.scss
+++ b/src/styles/components/_TeamPage.scss
@@ -1,6 +1,6 @@
 .about-header {
     height: 95vh;
-    background-image: linear-gradient(to right bottom, rgba($dark-yellow-grey, 0.5), rgba($dark-yellow-grey, 0.5)), url("../../assets/AboutUsPage/aboutuspagebg.jpg");
+    background-image: linear-gradient(to right bottom, rgba($color-dark-yellow-grey, 0.5), rgba($color-dark-yellow-grey, 0.5)), url("../../assets/AboutUsPage/aboutuspagebg.jpg");
     background-size: cover;
     background-position: top;
     //position: relative;
