--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-    color: $dark-grey;
+    color: $color-dark-grey;
     line-height: 1.6;
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
     box-sizing: border-box;
