--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -3,10 +3,10 @@
 }
 
 .footer {
-    background-color: $dark-grey;
+    background-color: $color-dark-grey;
     padding: $l-size 0;
     font-size: 1.4rem;
-    color: $light-grey;
+    color: $color-light-grey;
 
     @include respond(tab-port) {
         padding: 8rem 0;
@@ -53,7 +53,7 @@
         &:link,
         &:visited {
             color: $color-white;
-            background-color: $dark-grey;
+            background-color: $color-dark-grey;
             text-decoration: none;
             display: inline-block;
             transition: all .2s;
@@ -88,7 +88,7 @@
     &__link,
     &__link:link,
     &__link:visited {
-        color: $light-grey;
+        color: $color-light-grey;
 
         &:hover,
         &:active {
