Connected blog articles and recent to backend, modify contact form styles and state

--- a/src/styles/components/_BlogPage.scss
+++ b/src/styles/components/_BlogPage.scss
@@ -51,6 +51,19 @@
             width: 100%;
         }
     }
+
+    &__list-item {
+        transition: all .2s;
+
+        a {
+            color: inherit;
+        }
+
+        &:hover {
+            color: $color-blue;
+            transform: translateY(-3px);
+        }
+    }
 }
 
 .search {
