Added article page, linked blog to article page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './base/typography';
 @import './base/button';
 @import './components/AboutUsPage';
+@import './components/ArticlePage';
 @import './components/BlogPage';
 @import './components/ContactPage';
 @import './components/CarouselHome';
