--- a/src/styles/components/_BlogPage.scss
+++ b/src/styles/components/_BlogPage.scss
@@ -32,13 +32,24 @@
     }
 
     &__card {
+        display: block;
         background-color: $color-white;
         border-radius: 1rem;
         overflow: hidden;
         box-shadow: 0 .2rem .8rem rgba(0,0,0,.2);
+        color: inherit;
 
         &:not(:last-child) {
             margin-bottom: $l-size;
+        }
+    }
+
+    &__card--clickable {
+        transition: all .2s;
+
+        &:hover {
+            transform: translateY(-3px);
+            color: $color-blue;
         }
     }
 
