--- a/src/styles/components/_CarouselHome.scss
+++ b/src/styles/components/_CarouselHome.scss
@@ -3,16 +3,18 @@
     max-width: 500px;
     text-align: center;
     margin: 0 auto;
+    display: flex;
 
-    // &:after{
-    //     content: '';
-    //     display: block;
-    //     width: 100%;
-    //     height: 264px;
-    //     position: absolute;
-    //     top: 0;
-    //     left:0;
-    // }
+    &:after{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 264px;
+        position: absolute;
+        top: 0;
+        left:0;
+    }
+
 }
 
 .carouselhome-card {
@@ -31,4 +33,37 @@
 
 .carousel {
     height: 65vh;
+}
+
+.cards-slider-wrapper {
+    display: flex;
+    position: absolute;
+    transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    .card {
+      flex: 1;
+      min-width: 200px;
+      opacity: 0.7;
+      transform: scale(0.8);
+      box-shadow: none;
+      background-color: white;
+      border-color: white;
+      transition: opacity 300ms linear, border-color 300ms linear, background-color 300ms linear,transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+      .details {
+        opacity: 0;
+        transition: opacity 150ms linear;
+      }
+    }
+  }
+  
+$i: 0;
+@for $i from 0 through 29 {
+    .cards-slider.active-slide-#{$i} #card-#{$i} {
+      opacity: 1;
+      transform: scale(1);
+      background-color: #f3f3f3;
+      border-color: #f3f3f3;
+      .details {
+        opacity: 1;
+      }
+    }
 }
