--- a/src/styles/components/_BlogPage.scss
+++ b/src/styles/components/_BlogPage.scss
@@ -25,42 +25,20 @@
         margin-right: $l-size;
     }
 
+    &__article {
+        &:not(:last-child) {
+            margin-bottom: $l-size;
+        }
+    }
+
     &__sidebar {
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
 
-    &__card {
-        display: block;
-        background-color: $color-white;
-        border-radius: 1rem;
-        overflow: hidden;
-        box-shadow: 0 .2rem .8rem rgba(0,0,0,.2);
-        color: inherit;
-
-        &:not(:last-child) {
-            margin-bottom: $l-size;
-        }
-    }
-
-    &__card--clickable {
-        transition: all .2s;
-
-        &:hover {
-            transform: translateY(-3px);
-            color: $color-blue;
-        }
-    }
-
-    &__card-content {
-        padding: $l-size;
-    }
-
-    &__image-box {
-        img {
-            width: 100%;
-        }
+    &__list {
+        list-style: none;
     }
 
     &__list-item {
