Modified team page and carousel styles, fixed carousel pictures

--- a/src/styles/components/_HomePage.scss
+++ b/src/styles/components/_HomePage.scss
@@ -52,7 +52,9 @@
 }
 
 .section-vertical {
-    min-height: 53rem;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
     text-align: center;
     padding: $l-size;
 
