--- a/src/styles/components/_TeamPage.scss
+++ b/src/styles/components/_TeamPage.scss
@@ -18,3 +18,8 @@
     background-color: $color-red !important;
     color: $color-white !important;
 }
+
+.team__carousel {
+    margin: 0 auto;
+    padding: $l-size;
+}
