--- a/src/styles/components/_CarouselHome.scss
+++ b/src/styles/components/_CarouselHome.scss
@@ -14,7 +14,6 @@
         top: 0;
         left:0;
     }
-
 }
 
 .carouselhome-card {
@@ -32,38 +31,53 @@
 }
 
 .carousel {
-    height: 65vh;
+    min-height: 45rem;
 }
 
 .cards-slider-wrapper {
     display: flex;
     position: absolute;
     transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    .card {
-      flex: 1;
-      min-width: 200px;
-      opacity: 0.7;
-      transform: scale(0.8);
-      box-shadow: none;
-      background-color: white;
-      border-color: white;
-      transition: opacity 300ms linear, border-color 300ms linear, background-color 300ms linear,transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-      .details {
-        opacity: 0;
-        transition: opacity 150ms linear;
-      }
+
+    .carousel-card {
+        flex: 1;
+        min-width: 30rem;
+        opacity: 0.7;
+        transform: scale(0.8);
+        box-shadow: none;
+        background-color: white;
+        border-color: white;
+        transition: opacity 300ms linear, border-color 300ms linear, background-color 300ms linear,transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+        border-radius: .5rem;
+        overflow: hidden;
+        min-height: 30rem;
+
+        .details {
+            padding: $m-size;
+            opacity: 0;
+            transition: opacity 150ms linear;
+        }
+
+        &__image-box {
+          flex: 0 0 20%;
+  
+          img {
+              display: block;
+              width: 100%;
+          }
+        }
     }
-  }
+}
   
 $i: 0;
 @for $i from 0 through 29 {
     .cards-slider.active-slide-#{$i} #card-#{$i} {
-      opacity: 1;
-      transform: scale(1);
-      background-color: #f3f3f3;
-      border-color: #f3f3f3;
-      .details {
         opacity: 1;
-      }
+        transform: scale(1);
+        background-color: #f3f3f3;
+        border-color: #f3f3f3;
+        .details {
+            opacity: 1;
+        }
     }
 }
