--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -11,20 +11,29 @@
         line-height: 5rem;
         letter-spacing: 1.5rem;
 
-        @include respond(phone) {
+        @media only screen and (max-width: $bp-medium) {
+            font-size: 4rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
             letter-spacing: 1rem;
-            font-size: 5rem;
+            font-size: 3.5rem;
         }
     }
     
     &--sub {
         display: block;
-        font-size: 20px;
+        font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.75rem;
+        
+        @media only screen and (max-width: $bp-medium) {
+            font-size: 1.8rem;
+        }
 
-        @include respond(phone) {
-            letter-spacing: .5rem;
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.4rem;
+            letter-spacing: .8rem;
         }
     }
 }
@@ -34,12 +43,12 @@
     text-transform: uppercase;
     font-weight: 700;
 
-    @include respond(tab-port) {
-        font-size: 3rem;
+    @media only screen and (max-width: $bp-medium) {
+        font-size: 2.5rem;
     }
 
-    @include respond(phone) {
-        font-size: 2.5rem;
+    @media only screen and (max-width: $bp-small) {
+        font-size: 2rem;
     }
 }
 
@@ -51,4 +60,9 @@
 
 .subheading {
     font-size: 1.2rem;
+    color: $color-medium-dark-grey;
+}
+
+.paragraph {
+    color: $color-dark-grey;
 }
