--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,4 +16,4 @@
 @import './components/PageHeader';
 @import './components/ProjectsPage';
 @import './components/TeamPage';
-@import "node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
+// @import "node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
