Removed image for articles, fixed mobile sidebar

--- a/src/styles/components/_PageHeader.scss
+++ b/src/styles/components/_PageHeader.scss
@@ -14,3 +14,59 @@
     border-radius: 0px !important;
     border: 0px !important;
 }
+
+.bm-item {
+    display: inline-block;
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: $color-grey;
+    transition: all 0.2s;
+
+    &:hover {
+        color: white;
+    }
+    &:focus {
+        outline: none !important;
+        transform: scale(1.1);
+        color: $color-blue;
+    }
+}
+
+.bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    left: 36px;
+    top: 36px;
+}
+
+.bm-burger-bars {
+    background: $color-medium-grey;
+}
+
+.bm-cross-button {
+    height: 24px;
+    width: 24px;
+}
+
+.bm-cross {
+    background: $color-medium-grey;
+}
+
+.bm-menu {
+    background: $color-dark-grey;
+    padding: 2.5em 1.5em 0;
+    font-size: 2rem;
+}
+
+.bm-morph-shape {
+    fill: $color-dark-grey;
+}
+
+.bm-item-list { 
+    color: $color-grey;
+}
+
+.bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+}
