--- a/src/styles/components/_BlogPage.scss
+++ b/src/styles/components/_BlogPage.scss
@@ -3,13 +3,17 @@
 
     &__header {
         text-align: center;
-        padding: 10rem;
+        // padding: 10rem;
         background-image: linear-gradient(to right bottom, rgba($color-blue, 0.65), rgba($color-teal, 0.65)), url(../../assets/BlogPage/blogbg.jpg);
         background-size: cover;
         background-position: center;
         // background-blend-mode: color;
         color: $color-white;
+        height: 95vh;
         text-shadow: .2rem .5rem .5rem rgba($color-dark-grey, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__content {
