Add recruitment tab

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -66,3 +66,14 @@
 .paragraph {
     color: $color-dark-grey;
 }
+
+.subtitle {
+    font-size: 2rem;
+    font-weight: 400;
+    color: white;
+    text-align: center;
+}
+
+.list {
+    list-style: none;
+}
