--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './base/mixins';
 @import './base/settings';
 @import './base/typography';
+@import './base/utilities';
 @import './components/AboutUsPage';
 @import './components/ArticlePage';
 @import './components/BlogPage';
