Add bullet pts, add roles at the top

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,5 +16,6 @@
 @import './components/NotFoundPage';
 @import './components/PageHeader';
 @import './components/ProjectsPage';
+@import './components/RecruitmentPage';
 @import './components/TeamPage';
 // @import "node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
