Show blog page and add hackathon articn article

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -81,3 +81,13 @@
         content: "• "; color: $color-teal;
     }
 }
+
+.link {
+    text-decoration: none;
+    color: $color-blue;
+
+    &:hover,
+    &:active {
+        color: $color-teal;
+    }
+}
