Add hackathon teams

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import './components/CarouselHome';
 @import './components/Footer';
 @import './components/HomePage';
+@import './components/HackathonTeamsPage';
 @import './components/NotFoundPage';
 @import './components/PageHeader';
 @import './components/ProjectsPage';
