--- a/src/styles/base/_card.scss
+++ b/src/styles/base/_card.scss
@@ -31,6 +31,8 @@
 
     &__image-box {
         width: 100%;
+        max-height: 55rem;
+        overflow: hidden;
 
         img {
             display: block;
