--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -1,3 +1,11 @@
 .align-center {
     text-align: center;
 }
+
+.margin-bottom-small {
+    margin-bottom: 1.2rem;
+}
+
+.margin-bottom-medium {
+    margin-bottom: 2.5rem;
+}
