Changed recruitment page for batch 2020/2021 recruitment

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -23,7 +23,8 @@ $bp-small: 37.5em;    // 600px;
 $bp-smallest: 28.1em;    // 450px;
 
 // Font Size
-// $font-size-large: 1.8rem;
+$font-size-large: 1.8rem;
+$font-size-medium: 1.6rem;
 $font-size-small: 1.4rem;
 $font-size-header-secondary: 3.3rem;
 $font-size-header-tertiary: 2.5rem;
