--- a/src/styles/components/_TeamPage.scss
+++ b/src/styles/components/_TeamPage.scss
@@ -5,6 +5,9 @@
 .section-header {
     padding: 6rem;
     text-align: center;
+    p {
+        font-size: $font-size-medium;
+    }
 }
 
 .section-teampage {
