--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -25,6 +25,11 @@
         transform: translateY(-1px);
         box-shadow: 0 0.5rem 1rem rgba($color-dark-grey, 0.2);
     }
+
+    &.disabled {
+        pointer-events: none;
+        opacity: 0.8;
+    }
 }
 
 .btn-yellow {
